--- a/tm/Dockerfile
+++ b/tm/Dockerfile
@@ -7,6 +7,8 @@ RUN pip install gunicorn
 EXPOSE 8000
 
 ARG userid=1000
+ARG version
+
 RUN adduser -HD -u $userid tmuser
 
 RUN mkdir /app && chown tmuser /app
@@ -18,7 +20,7 @@ ENV TM_SETTINGS=/app/conf.py
 
 CMD [ "gunicorn", "--log-level", "INFO", "--error-logfile", "-", "-w", "4", "-b", "0.0.0.0:8000" ,"tm.web:app" ]
 
-ADD https://github.com/scythe-suite/tristo-mietitore/releases/download/v0.2.3/tm /app
+ADD https://github.com/scythe-suite/tristo-mietitore/releases/download/$version/tm /app
 
 RUN chown tmuser /app/tm
 
