--- a/tmserver/Dockerfile
+++ b/tmserver/Dockerfile
@@ -6,12 +6,7 @@ RUN pip install gunicorn
 
 EXPOSE 8000
 
-ARG userid=1000
-ARG version
-
-RUN adduser -HD -u $userid tmuser
-
-RUN mkdir /app && chown tmuser /app
+RUN mkdir /app
 
 WORKDIR /app
 
@@ -20,8 +15,5 @@ ENV TM_SETTINGS=/app/conf.py
 
 CMD [ "gunicorn", "--log-level", "INFO", "--error-logfile", "-", "-w", "4", "-b", "0.0.0.0:8000" ,"tm.web:app" ]
 
-ADD https://github.com/scythe-suite/tristo-mietitore/releases/download/$version/tm /app
-
-RUN chown tmuser /app/tm
-
-USER tmuser
+COPY tm /app/tm
+RUN chown -R root:root /app && chmod -R a+rx /app
