--- a/docker/tmserver/Dockerfile
+++ b/docker/tmserver/Dockerfile
@@ -1,19 +1,11 @@
 FROM python:2.7-alpine
-
 MAINTAINER Massimo Santini "santini@di.unimi.it"
-
 RUN pip install gunicorn
-
 EXPOSE 8000
-
 RUN mkdir /app
-
 WORKDIR /app
-
-ENV PYTHONPATH=/app/tm
+ENV PYTHONPATH=/bin/tm
 ENV TM_SETTINGS=/app/conf.py
-
 CMD [ "gunicorn", "--log-level", "INFO", "--error-logfile", "-", "-w", "4", "-b", "0.0.0.0:8000" ,"tm.web:app" ]
-
-COPY tm /app/tm
-RUN chown -R root:root /app && chmod -R a+rx /app
+COPY tm /bin/tm
+RUN chmod -R a+rx /bin/tm && chmod -R a+rx /app
