--- a/docker/router/nginx.conf
+++ b/docker/router/nginx.conf
@@ -30,11 +30,18 @@ http {
             root /usr/share/nginx/html;
         }
 
-        location ~ ^/tm/(?<teacher>\w+)/(?<session>\w+) {
+        location ~ ^/tm/(?<tester>\w+)/(?<session>\w+) {
             rewrite ^/tm/\w+/\w+(/.*) $1 break;
-	    proxy_set_header Host $host;
+	        proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_pass http://$teacher-$session:8000;
+            proxy_pass http://$tester-$session-tmserver:8000;
+        }
+
+        location ~ ^/st/(?<tester>\w+) {
+            rewrite ^/st/\w+(/.*) $1 break;
+	        proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_pass http://$tester-stweb:8000;
         }
 
     }
