--- a/docker/ststager/Dockerfile
+++ b/docker/ststager/Dockerfile
@@ -1,8 +1,10 @@
-FROM python:2.7-alpine
+FROM openjdk:8-jdk-alpine
 MAINTAINER Massimo Santini "santini@di.unimi.it"
+RUN apk add --no-cache --update python
 COPY sf /bin
 COPY st /bin
 COPY wait-for /bin
-RUN chmod a+rx /bin/sf /bin/st /bin/wait-for
+COPY entrypoint.sh /bin
+RUN chmod a+rx /bin/sf /bin/st /bin/wait-for /bin/entrypoint.sh
 ENV PYTHONPATH=/bin/sf:/bin/st
-CMD [ "sh", "-c", "/bin/wait-for $SCYTHE_REDIS_HOST:6379 -- /bin/st stage -H /uploads -s $SCYTHE_SESSION_ID" ]
+ENTRYPOINT ["/bin/entrypoint.sh"]
