Now the redis rest starts to work

--- a/docker/router/nginx.conf
+++ b/docker/router/nginx.conf
@@ -34,14 +34,14 @@ http {
             rewrite ^/tm/\w+/\w+(/.*) $1 break;
 	        proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_pass http://$tester-$session-tmserver:8000;
+            proxy_pass http://scythe-$tester-$session-tm:8000;
         }
 
         location ~ ^/st/(?<tester>\w+) {
             rewrite ^/st/\w+(/.*) $1 break;
 	        proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_pass http://$tester-stweb:8000;
+            proxy_pass http://scythe-$tester-web:8000;
         }
 
     }
