--- a/docker/router/nginx.conf
+++ b/docker/router/nginx.conf
@@ -44,5 +44,12 @@ http {
             proxy_pass http://scythe-$tester-web:8000;
         }
 
+        location ~ ^/sv/ {
+            rewrite ^/sv(/.*) $1 break;
+	        proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_pass http://scythe-viewer:80;
+        }
+
     }
 }
