Fixing paths and rewrite rules

--- a/docker/router/nginx.conf
+++ b/docker/router/nginx.conf
@@ -37,15 +37,15 @@ http {
             proxy_pass http://scythe-$tester-$session-tm:8000;
         }
 
-        location ~ ^/st/(?<tester>\w+) {
-            rewrite ^/st/\w+(/.*) $1 break;
+        location ~ ^/st/(?<tester>\w+)/r/.+ {
+            rewrite ^/st/\w+/r/(.*) $1 break;
 	        proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_pass http://scythe-$tester-web:8000;
         }
 
-        location ~ ^/sv/ {
-            rewrite ^/sv(/.*) $1 break;
+        location ~ ^/st/(?<tester>\w+) {
+            rewrite ^/st/\w+(/.*) $1 break;
 	        proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_pass http://scythe-viewer:80;
