--- a/docker/router/nginx.conf
+++ b/docker/router/nginx.conf
@@ -41,7 +41,7 @@ http {
             rewrite ^/st/\w+/r/(.*) $1 break;
 	        proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_pass http://scythe-$tester-web:8000;
+            proxy_pass http://scythe-$tester-rest:8000;
         }
 
         location ~ ^/st/(?<tester>\w+) {
