Fixed a fucking regexp

--- a/docker/router/nginx.conf
+++ b/docker/router/nginx.conf
@@ -31,8 +31,9 @@ http {
         }
 
         location ~ ^/tm/(?<tester>\w+)/(?<session>\w+) {
-            rewrite ^/tm/\w+/\w+(/.*) /$1 break;
-	        proxy_set_header Host $host;
+            rewrite ^/tm/\w+/\w+/(.*) /$1 break;
+            proxy_buffering off;
+            proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_pass http://scythe-$tester-$session-tm:8000;
         }
@@ -40,16 +41,17 @@ http {
         location ~ ^/st/(?<tester>\w+)/r/.+ {
             rewrite ^/st/\w+/r/(.*) /$1 break;
             proxy_http_version 1.1;
-            proxy_buffering off;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
+            proxy_buffering off;
 	        proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_pass http://scythe-$tester-rest:8000;
         }
 
         location ~ ^/st/(?<tester>\w+) {
-            rewrite ^/st/\w+(/.*) /$1 break;
+            rewrite ^/st/\w+/(.*) /$1 break;
+            proxy_buffering off;
 	        proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_pass http://scythe-viewer:80;
