--- a/docker/viewer/Dockerfile
+++ b/docker/viewer/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:alpine
-MAINTAINER Massimo Santini "santini@di.unimi.it"
+FROM nginx:1.15.1-alpine
+LABEL maintainer="Massimo Santini santini@di.unimi.it"
 EXPOSE 80
 COPY html /usr/share/nginx/html
